# Numerical_Methods

Benchmark_task/: CMakeLists.txt
Benchmark_task/inc/: benchlib.hpp
Benchmark_task/src/: main.cpp
Fifteenth_task/: report.md
Fifth_task/: CMakeLists.txt  plots.py  report.txt  rng_validation.csv
Fifth_task/inc/: rng_validation.hpp
Fifth_task/src/: main.cpp
Fourth_task/: CMakeLists.txt  pi_calculation.txt
Fourth_task/inc/: monte_carlo_pi.hpp
Log_task/: CMakeLists.txt  analysis.csv  dump.txt  log_plot.py  poly_reference.txt  report.txt  sollya_reference.sollya
Log_task/inc/: loglib.hpp
Log_task/src/: loglib.cpp  main.cpp
Log_task/verification/: tests.cpp  verification.cpp  verification.hpp
Second_task/: CMakeLists.txt  options.txt  report13.txt  report14.txt
Second_task/inc/: american_option.hpp  option_lib.hpp  option_parameters.hpp  utils.hpp
Second_task/src/: bsmontecarlo.cpp  bsoptimisation.cpp  data_generator.cpp  european_option.cpp  main.cpp  tests.cpp
Seventh_task/: report.txt
Seventh_task/inc/: config.hpp  matrix.hpp  utils.hpp
Seventh_task/src/: main.cpp
Tenth_task/: CMakeLists.txt  minstdres.txt  report.txt
Tenth_task/inc/: minstdrand.hpp  tests.hpp
Tenth_task/src/: main.cpp  tests.cpp
Third_task/: .~lock.precision_results.csv#  conclusion.txt  plots.py  precision_results.csv
Third_task/inc/: test_utils.hpp
Third_task/src/: main.cpp
